Fixed overflow issue in sidebar

--- a/wcfsetup/install/files/style/layout.less
+++ b/wcfsetup/install/files/style/layout.less
@@ -2358,6 +2358,7 @@ ul.inlineDataList {
 	
 	dl.dataList {
 		font-size: @wcfSmallFontSize;
+		overflow: hidden;
 	}
 	
 	/* @deprecated */
